theme.css
/* ... */
.is-phone .mod-root .workspace-tabs .workspace-tab-container {
  border-radius: 0;
}
.is-phone .view-content {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: calc(var(--tab-radius) * min(var(--theme-setting-mobileHorizontalPadding), 0.5) / 0.5);
  border-bottom-right-radius: calc(var(--tab-radius) * min(var(--theme-setting-mobileHorizontalPadding), 0.5) / 0.5);
}
.is-phone .mod-root .workspace-tab-container {
  /* Bottom margin the same as height of .mobile-navbar, to avoid overlap */
  margin-bottom: calc(max(var(--size-4-2), var(--safe-area-inset-bottom)) + var(--size-4-2) + var(--size-2-2) * 4 + var(--icon-size));
}
.is-phone.mod-toolbar-open .mod-root .workspace-tab-container {
  /* ...except when the toolbar is open. Using this as a proxy for detecting that the on-screen keyboard is present. */
  margin-bottom: 0;
}

/* Drawers */
.workspace-drawer {
  top: 0.5rem;
  bottom: 0.5rem;
  background: none;
}
.workspace-drawer-inner {
  background-color: var(--background-secondary);
  background: var(--theme-gradient-bottomToTop);
}
.workspace-drawer.mod-left .workspace-drawer-inner {
  border-top-right-radius: var(--radius-xl);
  border-bottom-right-radius: var(--radius-xl);
}
.workspace-drawer.mod-right .workspace-drawer-inner {
  border-top-left-radius: var(--radius-xl);
  border-bottom-left-radius: var(--radius-xl);
}

.mod-tappable,
.workspace-drawer-active-tab-back-icon,
.workspace-drawer-active-tab-icon {
  align-items: center;
  background-color: transparent;
  border-radius: var(--clickable-icon-radius);
  color: var(--theme-color-control);
  cursor: var(--cursor);
  display: flex;
  height: auto;
  justify-content: center;
  opacity: var(--icon-opacity);
  padding: var(--size-2-2) var(--size-2-3);
  transition: opacity 0.15s ease-in-out;
}
@media (hover: hover) {
  .mod-tappable:hover,
  .workspace-drawer-active-tab-back-icon:hover,
  .workspace-drawer-active-tab-icon:hover {
    /* Use hover state for feedback if using a pointing device */
    color: var(--theme-color-controlHover);
    background-color: var(--background-modifier-hover);
  }
}
.workspace-drawer-tab-option-item {
  border-radius: var(--clickable-icon-radius);
  padding: var(--size-2-2) var(--size-2-3);
}
@media (hover: hover) {
  .workspace-drawer-tab-option-item:hover {
    color: var(--theme-color-controlHover);
    background-color: var(--background-modifier-hover);
  }
  .workspace-drawer-tab-option-item:hover .workspace-drawer-tab-option-item-icon,
  .workspace-drawer-tab-option-item:hover .workspace-drawer-tab-option-item-title {
    color: var(--theme-color-controlHover);
  }
}
/* These are separate elements, but I want them to look like one */
.workspace-drawer-active-tab-icon,
.workspace-drawer-active-tab-icon + .workspace-drawer-active-tab-title {
  padding: var(--size-2-2) var(--size-2-3);
  border-radius: var(--clickable-icon-radius);
}
/* Match height of .workspace-drawer-active-tab-icon */
.workspace-drawer-active-tab-title {
  height: calc(24px + var(--size-2-2) * 2);
  vertical-align: baseline;
  line-height: 24px;
}
.workspace-drawer-active-tab-icon + .workspace-drawer-active-tab-title {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  /* Hide gap */
  margin-left: calc(-1 * var(--size-4-2));
}
.workspace-drawer-active-tab-icon:has(+ .workspace-drawer-active-tab-title) {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
@media (hover: hover) {
  .workspace-drawer-active-tab-icon + .workspace-drawer-active-tab-title:hover,
  .workspace-drawer-active-tab-icon:hover + .workspace-drawer-active-tab-title,
  .workspace-drawer-active-tab-icon:has(+ .workspace-drawer-active-tab-title:hover) {
    color: var(--theme-color-controlHover);
    background-color: var(--background-modifier-hover);
  }
}

/* Mobile navbar */
.mobile-navbar {
  background-color: transparent;
}

/* Pull action */
.pull-action.mod-activated {
  background-color: var(--interactive-accent);
  color: var(--text-on-accent);
}
.pull-down-action {
  top: 0.5rem;
  left: 0.5rem;
  right: 0.5rem;
  width: auto;
  max-width: 30rem;
  margin: var(--safe-area-inset-top) auto 0 auto;
  padding: 0.5em 1em;
  text-align: center;
  border-radius: var(--radius-l);
}
.pull-action {
  position: absolute;
  background-color: var(--background-secondary);
  z-index: var(--layer-popover);
  color: var(--text-muted);
  font-size: 90%;
  transition: background-color ease-in-out 150ms;
}

/* Mobile modals */
.is-phone .modal-container {
  padding: max(calc(2 * var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
}
.is-phone .mod-confirmation .modal {
  left: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  right: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  width: min(calc(100vw - 2*var(--theme-spacing-mobileHorizontalSpacing), calc(100vw - 1rem)))
}

.is-phone .modal .modal-title {
  margin-left: 2rem;
  margin-right: 2rem;
  position: relative;
}
.is-phone .modal.mod-sidebar-layout .modal-content > * {
  padding: 1em calc(1em + var(--safe-area-inset-right)) 1em calc(1em + var(--safe-area-inset-left));
}
.is-phone .vertical-tab-header-group {
    margin: 0 auto;
    width: 100%;
}
.is-phone .modal.mod-settings .vertical-tab-nav-item {
    display: flex;
    align-items: center;
    height: 44px;
    background-color: var(--theme-color-settingsGroupBg);
    padding: 0 0.75em;
    margin: 0;
    border-radius: 0;
    border: none;
    transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
}
.is-phone .modal.mod-sidebar-layout .modal-title {
  border-bottom: none;
}
.is-phone.theme-setting-mobileCardsUI .modal.mod-sidebar-layout .modal-title {
  padding: 0.5rem 1rem 0.5rem 1rem;
}
/* ... */

